# langchain-course

./: .env.example  README.md
agentic-rag/: README.md  ingestion.py  logger.py  main.py  pyproject.toml
agentic-rag/agentic-rag/chroma_db/: chroma.sqlite3
agentic-rag/chroma_db/1fc280cb-0614-4a0f-bf9e-ccc41b7a4691/: index_metadata.pickle
agentic-rag/graph/: graph.py
agentic-rag/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
agentic-rag/graph/chains/tests/: test_chains.py
agentic-rag/graph/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  web_search.py
documentation-helper/: README.md  ingestion.py  main.py  pyproject.toml
documentation-helper/backend/: core.py
hello-world/: README.md  main.py  pyproject.toml
rag/: README.md  ingestion.py  main.py  pyproject.toml
rag-lcel/: README.md  main.py  pyproject.toml
react-agent-impl/: README.md  callbacks.py  main.py  pyproject.toml
react-langgraph/: README.md  main.py  nodes.py  pyproject.toml  react.py
reflection-agent/: README.md  chains.py  main.py  pyproject.toml
reflexion-agent/: README.md  chains.py  main.py  pyproject.toml  schemas.py
search-agent/: README.md  main.py  pyproject.toml
search-agent-og/: README.md  main.py  pyproject.toml  schema.py
