[project]
name = "rag-lcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "python-dotenv>=1.2.1",
]
